# sylvain-eric-python

./: .gitignore  .mypi.ini  .pre-commit-config.yaml  AUTHORS  Dockerfile  README  README.md  app.py  docker-compose.yml  example_data.json  pyproject.toml
.github/workflows/: check.yml
db/: db.sqlite
grpc_auth/: Dockerfile  auth.proto  auth_pb2.py  auth_pb2_grpc.py  database.py  main.py
sylvain_eric_python/: Dockerfile  auth.proto  auth_pb2.py  auth_pb2_grpc.py  main.py
sylvain_eric_python/database/: database.py  init_db.py
sylvain_eric_python/models/: card.py  dbo.py  login.py  register.py
sylvain_eric_python/repositories/: pokemoncard.py
tests/: test_sylvain_eric_python.py
